TestSuite/errors/err0316.pas
type
  TClass = class
  end;

function operator+<T>(a, b, c, d: T): T; extensionmethod := default(T);

begin
end.